--- a/Menu_Siglo21/Menu_Siglo21.csproj
+++ b/Menu_Siglo21/Menu_Siglo21.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="MvvmLightLibs" Version="5.4.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Sharpnado.Presentation.Forms" Version="1.7.0" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.1080" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
@@ -25,13 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Fonts\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Views\BarPage.xaml.cs">
-      <DependentUpon>BarPage.xaml</DependentUpon>
-    </Compile>
     <Compile Update="Views\PagarCuentaPage.xaml.cs">
       <DependentUpon>PagarCuentaPage.xaml</DependentUpon>
     </Compile>
@@ -39,6 +37,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Views\BarPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\EnviaTuOrden.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\MenuPedidos.xaml">
